# stockFlow

./: .gitignore  README.md  build_files.bash  popular-estoque.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: settings.py  urls.py
backend/estoque/: forms.py  views.py
backend/estoque/templates/estoque/: base.html  dashboard.html  saida_rapida.html
core/: settings.py  urls.py  wsgi.py
core/static/css/: custom_admin.css
core/static/js/: custom_admin.js
estoque/: admin.py  forms.py  models.py  urls.py  views.py
estoque/migrations/: 0001_initial.py  0002_categoria_produto_categoria.py  0003_alter_produto_quantidade.py  0004_movimentacao_observacao.py  0005_movimentacao_usuario.py  0006_alter_movimentacao_options_alter_produto_categoria.py
estoque/templates/estoque/: base.html  dashboard.html  form_movimentacao.html  historico.html  login.html  saida_rapida.html
