[project]
name = "estocka-ai"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "python-dotenv>=1.2.1",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "django-jazzmin>=3.0.1",
    "whitenoise>=6.11.0",
]
